--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
     <head>
         <meta charset="utf-8">
         <title>HubSpot | Inbound Marketing, Sales, and Service Software</title>
+        <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900&display=swap" rel="stylesheet"> <!-- Font -->
+        <script src="https://kit.fontawesome.com/1444c08261.js" crossorigin="anonymous"></script> <!-- Icons -->
+        <link rel="shortcut icon" href="https://www.hubspot.com/hubfs/HubSpot_Logos/HubSpot-Inversed-Favicon.png"> <!-- Favicon -->
         <link rel="stylesheet" href="css/style.css"> <!-- CSS -->
     </head>
     <body>
         <!-- Sequential containers (fullwidth) generation with Emmet command ".container-fullwidth.section$*9" -->
-        <div class="container-fullwidth section1"></div>
+        <div class="container-fullwidth section1">
+            
+        </div>
         <div class="container-fullwidth section2"></div>
         <div class="container-fullwidth section3"></div>
         <div class="container-fullwidth section4"></div>
