section1 complete (fixed top)

--- a/index.html
+++ b/index.html
@@ -10,8 +10,27 @@
     </head>
     <body>
         <!-- Sequential containers (fullwidth) generation with Emmet command ".container-fullwidth.section$*9" -->
-        <div class="container-fullwidth section1">
-            
+        <div class="container-fullwidth section1 fixed-top">
+            <section class="nav-bar-top-fixed">
+                <div class="container">
+                    <div class="fixed clearfix">
+                        <div class="fixed-left clearfix">
+                            <div class="language-switcher-menu">
+                                <i class="globe"></i>
+                                <span class="language-switcher">English</span>
+                            </div>
+                            <div class="contact-section1">
+                                <a href="#">Contact Us</a>
+                            </div>
+                        </div>
+                        <div class="fixed-right">
+                            <i class="fas fa-search"></i>
+                            <button class="cta cta-login">Log in</button>
+                            <button class="cta cta-free">Get HubSpot free</button>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </div>
         <div class="container-fullwidth section2"></div>
         <div class="container-fullwidth section3"></div>
