section2 section3 complete

--- a/index.html
+++ b/index.html
@@ -11,30 +11,64 @@
     <body>
         <!-- Sequential containers (fullwidth) generation with Emmet command ".container-fullwidth.section$*9" -->
         <div class="container-fullwidth section1 fixed-top">
-            <section class="nav-bar-top-fixed">
-                <div class="container">
-                    <div class="fixed clearfix">
-                        <div class="fixed-left clearfix">
-                            <div class="language-switcher-menu">
-                                <i class="globe"></i>
-                                <span class="language-switcher">English</span>
+                <section class="nav-bar-top-fixed">
+                    <div class="container">
+                        <div class="fixed clearfix">
+                            <div class="fixed-left clearfix">
+                                <div class="language-switcher-menu">
+                                    <i class="globe"></i>
+                                    <span class="language-switcher">English</span>
+                                </div>
+                                <div class="contact-section1">
+                                    <a href="#">Contact Us</a>
+                                </div>
                             </div>
-                            <div class="contact-section1">
-                                <a href="#">Contact Us</a>
+                            <div class="fixed-right">
+                                <i class="fas fa-search"></i>
+                                <button class="cta cta-login">Log in</button>
+                                <button class="cta cta-free">Get HubSpot free</button>
                             </div>
                         </div>
-                        <div class="fixed-right">
-                            <i class="fas fa-search"></i>
-                            <button class="cta cta-login">Log in</button>
-                            <button class="cta cta-free">Get HubSpot free</button>
+                    </div>
+                </section>
+        </div>
+        <div class="container-fullwidth section2">
+            <header>
+                <div class="container">
+                    <nav class="clearfix">
+                        <div class="nav-bar-menu-left">
+                            <a href="#"><img src="img/HSLogo_color.svg" alt="Logo HubSpot"></a>
+                        </div>
+                        <div class="nav-bar-menu-right">
+                            <ul>
+                                <li>Software</li>
+                                <li>Pricing</li>
+                                <li>Resources</li>
+                                <li>Partners</li>
+                                <li>About</li>
+                            </ul>
+                        </div>
+                    </nav>
+                </div>
+            </header>
+        </div>
+        <div class="container-fullwidth section3">
+            <section>
+                <div class="container">
+                    <div class="jumbotron clearfix">
+                        <div class="jumbotron-left">
+                            <p><strong>Always easy. Now deeply powerful.</strong> We've packed even more enterprise features into HubSpot's marketing software. Say hello to Marketing Hub Enterprise 2020.</p>
+                        </div>
+                        <div class="jumbotron-right">
+                            <button class="cta cta-learn">Learn more</button>
                         </div>
                     </div>
                 </div>
             </section>
         </div>
-        <div class="container-fullwidth section2"></div>
-        <div class="container-fullwidth section3"></div>
-        <div class="container-fullwidth section4"></div>
+        <div class="container-fullwidth section4">
+            
+        </div>
         <div class="container-fullwidth section5"></div>
         <div class="container-fullwidth section6"></div>
         <div class="container-fullwidth section7"></div>
