--- a/index.html
+++ b/index.html
@@ -67,7 +67,20 @@
             </section>
         </div>
         <div class="container-fullwidth section4">
-            
+            <main class="jumbotron-clouds">
+                <div class="container clearfix">
+                    <div class="text">
+                        <h1>There’s a better way to grow.</h1>
+                        <p>Marketing, sales, and service software that helps your business grow without compromise. Because “good for the business” should also mean “good for the customer.”</p>
+                        <button class="cta cta-big">Get HubSpot free</button>
+                        <small>Get started with FREE tools, and <br> upgrade as you grow.</small>
+                    <div>
+                    <div class="hero-image">
+                        <img src="img/hero-image-desktop.svg" alt="Hero Image">
+                    </div>
+                </div>
+            </main>
+            <section class="jumbotron-green"></section>
         </div>
         <div class="container-fullwidth section5"></div>
         <div class="container-fullwidth section6"></div>
