section5 + hover effects

--- a/index.html
+++ b/index.html
@@ -82,7 +82,89 @@
             </main>
             <section class="jumbotron-green"></section>
         </div>
-        <div class="container-fullwidth section5"></div>
+        <div class="container-fullwidth section5">
+            <div class="container">
+                <div class="integration">
+                    <img src="img/Integrations_Illustration@2x.webp" alt="Integration Illustration">
+                    <h2>Powerful alone. Better together.</h2>
+                    <p>HubSpot offers a full stack of software for marketing, sales, and customer service, with a completely free CRM at its core. They’re powerful alone — but even better when used together.</p>
+                </div>
+                <div class="wrapper">
+                    <div class="card-crm clearfix">
+                        <div class="card-crm-left">
+                            <img src="img/CRM-Illustration.svg" alt="CRM Illustration">
+                            <button class="cta cta-small">Get free CRM</button>
+                        </div>
+                        <div class="card-crm-right clearfix">
+                            <h2>Free HubSpot CRM</h2>
+                            <p>Everything you need to organize, track, and build better relationships with leads and customers. Yes, it's 100% free. Forever.</p>
+                            <h3 id="wrapper-h3">popular features</h3>
+                            <ul>
+                                <li><i class="fas fa-check-circle"></i>Contact Insights</li>
+                                <li><i class="fas fa-check-circle"></i>Deals</li>
+                                <li><i class="fas fa-check-circle"></i>Tasks</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="cards-3cl clearfix">
+                        <div class="column column1">
+                            <div class="market">
+                                <div class="intro">
+                                    <img src="img/Marketing-Hub-Free.svg" alt="market">
+                                    <h2>Marketing Hub</h2>
+                                    <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaigns at scale.</p>
+                                </div>
+                                <div class="features">
+                                    <h3>popular features</h3>
+                                    <ul>
+                                        <li><i class="fas fa-check-circle"></i>Lead Generation</li>
+                                        <li><i class="fas fa-check-circle"></i>Marketing Automation</li>
+                                        <li><i class="fas fa-check-circle"></i>Analytics</li>
+                                    </ul>
+                                    <button class="cta cta-small">Get started</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="column column2">
+                            <div class="sales">
+                                <div class="intro">
+                                    <img src="img/Sales-Professional-Illustration.svg" alt="sales">
+                                    <h2>Sales Hub</h2>
+                                    <p>Time-saving sales software that helps you get deeper insights into prospects, automate the tasks you hate, and close more deals faster.</p>
+                                </div>
+                                <div class="features">
+                                    <h3>popular features</h3>
+                                    <ul>
+                                        <li><i class="fas fa-check-circle"></i>Email Tracking</li>
+                                        <li><i class="fas fa-check-circle"></i>Meeting Scheduling</li>
+                                        <li><i class="fas fa-check-circle"></i>Email Automation</li>
+                                    </ul>
+                                    <button class="cta cta-small">Get started</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="column column3">
+                            <div class="service">
+                                <div class="intro">
+                                    <img src="img/Service-Hub-Illustration.svg" alt="service">
+                                    <h2>Service Hub</h2>
+                                    <p>Customer service software to help you connect with customers, exceed expectations, and turn them into promoters that grow your business.</p>
+                                </div>
+                                <div class="features">
+                                    <h3>popular features</h3>
+                                    <ul>
+                                        <li><i class="fas fa-check-circle"></i>Tickets</li>
+                                        <li><i class="fas fa-check-circle"></i>Customer Feedback</li>
+                                        <li><i class="fas fa-check-circle"></i>Knowledge Base</li>
+                                    </ul>
+                                    <button class="cta cta-small">Get started</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="container-fullwidth section6"></div>
         <div class="container-fullwidth section7"></div>
         <div class="container-fullwidth section8"></div>
