--- a/index.html
+++ b/index.html
@@ -165,7 +165,74 @@
                 </div>
             </div>
         </div>
-        <div class="container-fullwidth section6"></div>
+        <div class="container-fullwidth section6">
+            <section class="jumbotron-community">
+                <div class="container">
+                    <div class="community-header">
+                        <h2>Learn and grow with award-winning support and a thriving community behind you.</h2>
+                        <p>You don't have to go it alone. Master the inbound methodology and get the most out of your tools with HubSpot's legendary customer support team and a community of thousands of marketing and sales pros just like you.</p>
+                    </div>
+                    <div class="board clearfix">
+                        <div class="item item1">
+                            <div class="box1">
+                                <img src="img/homepage_community_agency.svg" alt="Agency">
+                                <h3>150</h3>
+                                <p>HubSpot user groups</p>
+                            </div>
+                        </div>
+                        <div class="item item2">
+                            <div class="box2">
+                                <img src="img/homepage_community_blog.svg" alt="Blog">
+                                <h3>7m</h3>
+                                <p>monthly visits</p>
+                            </div>
+                        </div>
+                        <div class="item item3">
+                            <div class="box3">
+                                <img src="img/homepage_community_academy.svg" alt="Academy">
+                                <h3>200k</h3>
+                                <p>certified professionals</p>
+                            </div>
+                        </div>
+                        <div class="item item4">
+                            <div class="box4">
+                                <img src="img/homepage_community_inbound.svg" alt="Inbound">
+                                <h3>26k</h3>
+                                <p>registered attendees</p>
+                            </div>
+                        </div>
+                        <div class="item item5">
+                            <div class="box5">
+                                <img src="img/homepage_community_connect.svg" alt="Connect">
+                                <h3>350</h3>
+                                <p>integrations</p>
+                            </div>
+                        </div>
+                        <div class="item item6">
+                            <div class="box6">
+                                <img src="img/homepage_community_globe.svg" alt="Globe">
+                                <h3>6</h3>
+                                <p>languages</p>
+                            </div>
+                        </div>
+                        <div class="item item7">
+                            <div class="box-7">
+                                <img src="img/homepage_community_followers.svg" alt="Followers">
+                                <h3>2.6m</h3>
+                                <p>social followers</p>
+                            </div>
+                        </div>
+                        <div class="item item8">
+                            <div class="box8">
+                                <img src="img/growthhub-white-small-1.svg" alt="Hub">
+                                <h3>5k</h3>
+                                <p>profiles and counting</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
         <div class="container-fullwidth section7"></div>
         <div class="container-fullwidth section8"></div>
         <div class="container-fullwidth section9"></div>
