section7 section8 complete

--- a/index.html
+++ b/index.html
@@ -233,8 +233,75 @@
                 </div>
             </section>
         </div>
-        <div class="container-fullwidth section7"></div>
-        <div class="container-fullwidth section8"></div>
+        <div class="container-fullwidth section7">
+            <section class="jumbotron-customer">
+                <div class="container">
+                    <div class="customer-wrapper clearfix">
+                        <div class="customer-description">
+                            <h3>68,800</h3>
+                            <p>customers in over <strong>100</strong><br> countries growing their businesses with HubSpot</p>
+                        </div>
+                        <div class="customers clearfix">
+                            <div class="customer">
+                                <div>
+                                    <img src="img/Atlassian-horizontal-blue@2x.webp" alt="Atlassian logo">
+                                </div>
+                            </div>
+                            <div class="customer">
+                                <div>
+                                    <img src="img/doordash_owler_20181011_194113_original@2x.webp" alt="Doordash logo">
+                                </div>
+                            </div>
+                            <div class="customer">
+                                <div>
+                                    <img src="img/g2crowd-logo@2x.webp" alt="Crowd logo">
+                                </div>
+                            </div>
+                            <div class="customer">
+                                <div>
+                                    <img src="img/purple-logo@2x.webp" alt="Purple logo">
+                                </div>
+                            </div>
+                            <div class="customer">
+                                <div>
+                                    <img src="img/Subaru_Logo_v2_186x63@2x.webp" alt="Subaru logo">
+                                </div>
+                            </div>
+                            <div class="customer">
+                                <div>
+                                    <img src="img/Wistia_logo@2x.webp" alt="Wistia logo">
+                                </div>
+                            </div>
+                            <div class="customer">
+                                <div>
+                                    <img src="img/Classpass-logo@2x.webp" alt="Classpass logo">
+                                </div>
+                            </div>
+                            <div class="customer">
+                                <div>
+                                    <img src="img/VMware_logo_gry_RGB_300dpi@2x.webp" alt="VMware logo">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
+        <div class="container-fullwidth section8">
+            <div class="container">
+                <div class="grow clearfix">
+                    <div class="grow-left">
+                        <h2>Start Growing With HubSpot Today</h2>
+                        <p>With tools to make every part of your process more human and a support team excited to help you, getting started with inbound has never been easier.</p>
+                        <button class="cta cta-big">Get HubSpot free</button>
+                        <small>Get started with FREE tools, or get more with our premium software.</small>
+                    </div>
+                    <div class="grow-right">
+                        <img src="img/Variation-2@2x.webp" alt="profile">
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="container-fullwidth section9"></div>
     </body>
 </html>
