section9 + sticky complete

--- a/index.html
+++ b/index.html
@@ -289,19 +289,115 @@
         </div>
         <div class="container-fullwidth section8">
             <div class="container">
-                <div class="grow clearfix">
-                    <div class="grow-left">
+                <div class="growing clearfix">
+                    <div class="growing-left">
                         <h2>Start Growing With HubSpot Today</h2>
                         <p>With tools to make every part of your process more human and a support team excited to help you, getting started with inbound has never been easier.</p>
                         <button class="cta cta-big">Get HubSpot free</button>
                         <small>Get started with FREE tools, or get more with our premium software.</small>
                     </div>
-                    <div class="grow-right">
+                    <div class="growing-right">
                         <img src="img/Variation-2@2x.webp" alt="profile">
                     </div>
                 </div>
             </div>
         </div>
-        <div class="container-fullwidth section9"></div>
+        <div class="container-fullwidth section9">
+            <footer>
+                <div class="container">
+                    <div class="bottom-menu clearfix">
+                        <div class="btm-menu btm-menu1">
+                            <h4>Increase Your Traffic</h4>
+                            <ul>
+                                <li><a href="#">Ad Software</a></li>
+                                <li><a href="#">Blog Software</a></li>
+                                <li><a href="#">SEO Software</a></li>
+                                <li><a href="#">Social Media Software</a></li>
+                                <li><a href="#">Content Management System</a></li>
+                            </ul>
+                        </div>
+                        <div class="btm-menu btm-menu2">
+                            <h4>Connect With Leads</h4>
+                            <ul>
+                                <li><a href="#">Find New Prospects</a></li>
+                                <li><a href="#">Email Tracking</a></li>
+                                <li><a href="#">Sales Email Templates</a></li>
+                                <li><a href="#">Click to Call Your Leads</a></li>
+                                <li><a href="#">Email Marketing</a></li>
+                            </ul>
+                        </div>
+                        <div class="btm-menu btm-menu3">
+                            <h4>Close and Manage Leads</h4>
+                            <ul>
+                                <li><a href="#">Document Tracking Tool</a></li>
+                                <li><a href="#">Meeting Schedule Tool</a></li>
+                                <li><a href="#">Sales Automation Tool</a></li>
+                                <li><a href="#">Lead Management Tool</a></li>
+                                <li><a href="#">Pipeline Management Tool</a></li>
+                            </ul>
+                        </div>
+                        <div class="btm-menu btm-menu4">
+                            <h4>Support and Tools</h4>
+                            <ul>
+                                <li><a href="#">HubSpot Partners</a></li>
+                                <li><a href="#">Join a Local User Group</a></li>
+                                <li><a href="#">Get a Free Website Report</a></li>
+                                <li><a href="#">HubSpot Templates</a></li>
+                                <li>Free Tools & Generators</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="clearfix">
+                        <div class="social clearfix">
+                            <div class="social-cta">
+                                <button class="cta">Contact HubSpot Support</button>
+                            </div>
+                            <div class="social-icon">
+                                <i class="fab fa-facebook-f"></i>
+                            </div>
+                            <div class="social-icon">
+                                <i class="fab fa-instagram"></i>
+                            </div>
+                            <div class="social-icon">
+                                <i class="fab fa-youtube"></i>
+                            </div>
+                            <div class="social-icon">
+                                <i class="fab fa-twitter"></i>
+                            </div>
+                            <div class="social-icon">
+                                <i class="fab fa-linkedin-in"></i>
+                            </div>
+                            <div class="social-icon">
+                                <i class="fab fa-amazon"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="world clearfix">
+                        <ul>
+                            <li><a href="#">English</a></li>
+                            <li><a href="#">Deutsch</a></li>
+                            <li><a href="#">日本語</a></li>
+                            <li><a href="#">Español</a></li>
+                            <li><a href="#">Português</a></li>
+                            <li><a href="#">Français</a></li>
+                        </ul>
+                    </div>
+                    <div class="copy clearfix">
+                        <div class="copy-logo">
+                            <a href="#"><img src="img/HSLogo_gray.svg" alt="logo"></a>
+                            <p>Copyright © 2020 HubSpot, Inc.</p>
+                        </div>
+                        <div class="legal">
+                            <a href="#">Legal Stuff</a>
+                            <a href="#">Privacy Policy</a>
+                        </div>
+                    </div>
+                </div>
+            </footer>
+        </div>
+        <div class="sticky">
+            <i class="fas fa-comment-alt"></i>
+        </div>
+        </div>
     </body>
 </html>
